fix: registry sync path removal bug